--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   mrz_scanner: ^0.0.1+3
+  nfc_manager: ^3.4.0
 
 dev_dependencies:
   flutter_test:
